<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2012 Anthony Dahanne
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program. If not, see <http://www.gnu.org/licenses/>.

-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!-- 	<item android:title="@string/download_full_res_image_title" -->
<!-- 		android:icon="@android:drawable/ic_menu_save" android:id="@+id/download_full_res_image" /> -->
<!-- 	<item android:title="@string/image_properties" android:icon="@android:drawable/ic_menu_info_details" -->
<!-- 		android:id="@+id/show_image_properties" /> -->
<!-- 	<item android:title="@string/share_image_title" android:icon="@android:drawable/ic_menu_share" -->
<!-- 		android:id="@+id/share_image" /> -->
<!-- 	<item android:title="@string/send_image_title" android:icon="@android:drawable/ic_menu_send" -->
<!-- 		android:id="@+id/send_image" /> -->
<!-- 	<item android:title="@string/choose_photo_number" android:icon="@android:drawable/ic_menu_search" -->
<!-- 		android:id="@+id/choose_photo_number" /> -->

<!-- <item android:id="@+id/advanced_control" android:title="@string/advanced_control_title" android:icon="@android:drawable/ic_menu_preferences"></item> -->
	<item android:title="@string/search" android:icon="@android:drawable/ic_menu_search"
		android:id="@+id/search" />
	<item    
    android:id="@+id/cameras"    
    android:title="@string/cameras"    
    android:icon="@android:drawable/ic_menu_more">
	    <menu>
			<item android:title="@string/camera1" android:icon="@android:drawable/ic_menu_camera"
				android:id="@+id/camera1" />
			<item android:title="@string/camera2" android:icon="@android:drawable/ic_menu_camera"
				android:id="@+id/camera2" />
			<item android:title="@string/camera3" android:icon="@android:drawable/ic_menu_camera"
				android:id="@+id/camera3" />
			<item android:title="@string/camera4" android:icon="@android:drawable/ic_menu_camera"
				android:id="@+id/camera4" />
	    </menu>
	</item>
    <item android:title="@string/about" android:icon="@android:drawable/ic_menu_help"
		android:id="@+id/about" />
    <item android:title="@string/share_image_title" android:icon="@android:drawable/ic_menu_share"
		android:id="@+id/share_image" />
</menu>
